<resources>
    <string name="app_name">NachiPizza</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>